--- a/assignment5/css/style.css
+++ b/assignment5/css/style.css
@@ -166,7 +166,7 @@ body {
 
 .aside-container {
     width: 940px;
-    padding: 23px 25px 0 22px;
+    padding: 23px 22px 0 22px;
     position: relative;
     margin: 0 auto 19px auto;
     border: 1px solid #cfcebe;
@@ -258,11 +258,11 @@ body {
 
 .contents-box {
     padding-top: 2px;
-    padding-left: 192px;
+    padding-left: 191px;
 }
 
 .first-title {
-    padding: 3px 0 11px 6px;
+    padding: 2px 0 12px 6px;
     margin-bottom: 20px;
     background: url('../img/green-bar.png') 0 bottom repeat-x;
 }
@@ -291,6 +291,7 @@ body {
 
 .btn-display {
     display: inline-block;
+    margin-right: 5px;
 }
 
 .btn-display:not(:first-child) {
@@ -338,7 +339,7 @@ body {
     margin: 0 auto;
     position: absolute;
     top: 24px;
-    left: 22px;
+    left: 21px;
 }
 
 .sidebar-wrap>ul {
@@ -416,10 +417,12 @@ thead th{
     border-bottom: 1px solid #999999;
     border-right: 1px solid #999999;
     height: 31px;
+    font-size: 13px;
     color: #585953;
 }
 
 .td-size {
+    font-size: 12px;
     min-height: 30px;
     line-height: 30px;
     border-top: 1px solid #ffffff;
@@ -428,9 +431,14 @@ thead th{
 
 .td-text-align {
     text-align: left;
+    padding-left: 10px;
 }
 
-.tb>tr {
+.tb {
+    border-bottom: 1px solid #999999;
+}
+
+.tb>tr:not(:last-child) {
     border-bottom: 1px solid #d9d9d9;
 }
 
@@ -607,16 +615,18 @@ address {
     margin-bottom: 5px;
 }
 
+address>img {
+    margin-bottom: 8px;
+}
 
-.popup-contents-box>p {
+.keyword-p-wrap>p {
     background: url('../img/green-bullet.png') left center no-repeat;
     padding-left: 23px;
-    margin-bottom: 14px;
+    margin-bottom: 17px;
     font-size: 12px;
     word-spacing: 2px;
     white-space: nowrap;
     vertical-align: middle;
-    line-height: 13.5px;
     color: #40403e;
 }
 
@@ -657,10 +667,6 @@ address {
     padding-left: 21px;
 }
 
-.select-pannel-box {
-    background: url('../img/keyword/dot-btm.png') left top repeat-x;
-}
-
 .select-right {
     background: url('../img/select-right.png') right center no-repeat;
     padding-right: 16px;
@@ -698,8 +704,8 @@ address {
     min-width: 362px;
     font-size: 12px;
     position: absolute;
-    top: 10px;
-    left: 216px;
+    top: 8px;
+    left: 218px;
 }
 
 #searching>input {
@@ -755,10 +761,34 @@ address {
     cursor: pointer;
 }
 
+.kw-last-btn {
+    background: url('../img/keyword/kw-last-btn.png') left center no-repeat;
+    display: inline-block;
+    text-decoration: none;
+    padding-left: 4px;
+    font-size: 14px;
+    color: #ffffff;
+    margin: 0 8.5px;
+}
+
+.kw-last-btn-right {
+    background: url('../img/keyword/kw-last-btn-r.png') right center no-repeat;
+    padding: 0 4px 0 0;
+}
+
+.kw-last-btn-mid {
+    background: url('../img/keyword/kw-last-btn-m.png') center center repeat-x;
+    padding: 7px 22px;
+}
+
 .letter-spacing-date {
     letter-spacing: 8px;
 }
 
 .copyright {
     padding-left: 2px;
+}
+
+label {
+    cursor: pointer;
 }
