--- a/css/layout.css
+++ b/css/layout.css
@@ -6,8 +6,13 @@
 }
 
 .arrow {
-    transition: 0.3s;
-    transform-origin: center center;
+    position: relative;
+    left: 57px;
+    top: 0;
+}
+
+.arrow-ml {
+    left: 76px;
 }
 
 .opacity-bg {
@@ -35,7 +40,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 751px;
-    height: 664px;
+    height: 663px;
     margin: 0 auto;
     background-color: #e9e8e8;
     border: 6px solid #ffffff;
@@ -76,26 +81,29 @@
     background-size: 48px auto;
     cursor: pointer;
 }
+.wrap-popup {
+    padding: 31px 19px 13px 19px;
+}
 
 .wrap-popup2 {
-    padding: 31px 19px 14px 19px;
+    padding: 31px 19px 16px 19px;
 }
 
 .popup-contents-box {
     border: 1px solid #928f8f;
     border-radius: 4px;
-    padding: 17px 31px;
+    padding: 20px 22px 6px 13px;
     margin-bottom: 15px;
     background-color: #ffffff;
 }
 
 .select-pannel-box {
     padding-top: 12px;
-    margin-bottom: 12px;
+    margin-bottom: 13px;
 }
 
 .search-pannel-box {
-    padding-bottom: 12px;
+    padding-bottom: 15px;
     margin-bottom: 15px;
     position: relative;
 }
@@ -125,6 +133,24 @@
 
 .chart-section {
     position: relative;
+    margin-bottom: 13px;
+    padding-left: 2px;
+}
+
+.chart-section>table>thead th {
+    height: 29px;
+}
+
+.chart-section>table>tbody {
+    border-bottom: 1px solid #999999;
+}
+
+.chart-section>table>tbody>tr:not(:last-child) {
+    border-bottom: 1px solid #d9d9d9;
+}
+
+.chart-section>table>tbody>tr>td:not(:last-child) {
+    border-right: 1px solid #d9d9d9;
 }
 
 .chart-num-section {
@@ -138,12 +164,10 @@
     font-weight: bold;
 }
 
-.chart-section {
-    margin-bottom: 13px;
-}
-
 .alphabet {
     display: inline-block;
+    width: 400px;
+    height: 63px;
     position: relative;
     vertical-align: middle;
 }
@@ -161,15 +185,16 @@
 }
 
 .korean {
-    display: inline-block;
-    padding-left: 1px;
+    padding-left: 3px;
     padding-right: 19px;
+    position: absolute;
+    bottom: 13px;
 }
 
 .other {
     position: absolute;
-    top: 22px;
-    right: 3px;
+    bottom: 13px;
+    right: 11px;
 
 }
 
@@ -210,27 +235,37 @@ input[id="journalbtn"]:checked + div {
 .nav-list {
     width: 132px;
     height: 43px;
+    float: left;
     position: relative;
+}
+
+#navbar-guide::after {
+    content: "";
+    display: block;
+    clear: both;
 }
 
 .nav-list>a {
     display: block;
-    float: left;
+    width: 131px;
     position: relative;
-    padding-left: 33px;
-    padding-right: 37px;
+    padding: 0 33px 0 33px;
     background: url('../img/header/divider.png') right center no-repeat;
 }
 
 .nl-first>a {
-    width: 127px;
+    width: 130px;
     padding-left: 46px;
     padding-right: 41px;
 }
 
+.nl-first:hover {
+    background: url('../img/header/hover-home.png') left center no-repeat;
+}
+
 .nl-last>a {
-    padding-left: 24px;
-    padding-right: 28px;
+    padding:  0 24px 0 24px;
+    background: none;
 }
 
 .invis-nav {
@@ -247,8 +282,8 @@ input[id="journalbtn"]:checked + div {
     list-style: none;
     position: absolute;
     top: 38px;
-    left: 5px;
     min-width: 140px;
+    line-height: 12px;
     padding-top: 12px;
     padding-bottom: 18px;
     text-align: left;
@@ -258,32 +293,35 @@ input[id="journalbtn"]:checked + div {
 
 .hover-popup {
     list-style: none;
-    margin: 0 7px;
+    margin: 0 auto;
+    padding-bottom: 8px;
     background: url('../img/dropmenu/dm-sub-div.png') 0 bottom repeat-x;
 }
 
 .hover-popup-list>a {
     display: block;
     color: #6a983c;
-    padding: 6px 11px;
-    text-decoration: none;
-    font-size: 12px;
+    padding: 6px 7px;
+    background: url('../');
 }
 
 .hover-popup-list>a:hover {
     background: url('../img/dropmenu/db-hvr-bg.png') 0 center repeat-x;
 }
 
+.hv-nl:hover {
+    background: url('../img/dropmenu/dropmenu-top.png') left center no-repeat;
+}
+
 .nav-list:hover .hover-popup-bg {
     display: block;
 }
-
 
 .nav-list:hover .nav-list>a {
     background: url('../img/dropmenu/hover-dropmenu.png') center center no-repeat;
 }
 
-.nav-hover-info {
+.nav-hv-info {
     display: none;
 }
 
@@ -291,14 +329,8 @@ input[id="journalbtn"]:checked + div {
     display: none;
 }
 
-.nav-list:hover .nav-hover-info {
-    display: inline-block;
-}
-
-.hover-popup:hover {
+.nav-list:hover .nav-hv-info {
     display: block;
-    margin: 0;
-    padding-bottom: 9px;
 }
 
 .nav-list:hover .arrow {
@@ -324,7 +356,7 @@ input[id="journalbtn"]:checked + div {
 }
 
 .keyword-search-container:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 .kw-label {
@@ -337,13 +369,114 @@ input[id="journalbtn"]:checked + div {
     clear: both;
 }
 
-.keyword-search {
-    height: 28px;
-    width: 68%;
+.input-wrap {
     float: right;
+    height: 26px;
+    width: 335px;
+}
+
+.keyword-search {
+    height: 100%;
+    width: 100%;
+    border: 0;
+    background-color: transparent;
 }
 
 .keyword-banner {
     height: 48px;
     margin-bottom: 10px;
+}
+
+.nav-info {
+    position: absolute;
+    top: 15px;
+    left: 29px;
+}
+
+.ni-last {
+    left: 20px;
+}
+
+.nav-list:hover .nav-hv-info {
+    display: inline-block;
+    position: absolute;
+    top: 15px;
+    left: 29px;
+}
+
+.btn-lefmg {
+    margin-left: 1px;
+}
+
+.top-tb {
+    background: url('../img/text-bar/top-tb.png') 0 top repeat-x;
+}
+
+.bt-tb {
+    background: url('../img/text-bar/bt-tb.png') 0 bottom repeat-x;
+}
+
+.top-l-tb {
+    background: url('../img/text-bar/t-l-tb.png') left top no-repeat;
+}
+
+.top-r-tb {
+    background: url('../img/text-bar/t-r-tb.png') right top no-repeat;
+    padding-top: 4px;
+}
+
+.bt-l-tb {
+    background: url('../img/text-bar/bt-l-tb.png') left bottom no-repeat;
+}
+
+.bt-r-tb {
+    background: url('../img/text-bar/bt-r-tb.png') right bottom no-repeat;
+    padding-bottom: 4px;
+}
+
+.left-tb {
+    background: url('../img/text-bar/left-tb.png') left 0 repeat-y;
+    padding-left: 4px;
+}
+
+.right-tb {
+    background: url('../img/text-bar/right-tb.png') right 0 repeat-y;
+    padding-right: 4px;
+    padding-bottom: 2px;
+}
+
+.tb-wrap {
+    background-image: linear-gradient(#faf3f3, #ffffff);
+}
+
+.kw-btn-display {
+    display: inline-block;
+}
+
+.jl-header {
+    margin-bottom: 9px;
+}
+
+.jl-pcb {
+    padding: 15px 24px 14px 24px;
+}
+
+.jl-p-wrap>p {
+    padding-left: 21px;
+    margin-bottom: 0;
+}
+
+.jl-p-wrap {
+    background: url('../img/keyword/dot-btm.png') center bottom repeat-x;
+    padding-bottom: 15px;
+}
+
+.popup-cb-inner {
+    padding: 0 7px 0 3px;
+}
+
+.english {
+    position: absolute;
+    top: 11px;
+    padding-left: 2px;
 }
